<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.prakharagarwal.newsdaily.MainActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:id="@+id/scrollview1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/text_weather_date"
                android:layout_width="wrap_content"
                android:textSize="30dp"
                android:textStyle="bold"
                android:paddingBottom="10dp"
                android:layout_height="wrap_content"
                android:text="" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:id="@+id/separatorLine1"
                android:layout_below="@id/text_weather_date"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1.2"
                    android:layout_gravity="center"

                    android:layout_height="wrap_content"
                    android:orientation="vertical">



                    <TextView
                        android:id="@+id/text_weather_high"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:text=""/>

                    <TextView
                        android:id="@+id/text_weather_low"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:textSize="25dp"
                        android:text="" />



                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:id="@+id/image_weather_icon"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/text_weather_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:text="" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:id="@+id/separatorLine2"/>

            <TextView
                android:id="@+id/detail_additional_info_textview"
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/location_weather_textView" />

            <TextView
                android:id="@+id/text_weather_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"

                android:textSize="18dp"
                android:text=""
                android:paddingStart="10dp" />




        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/text_weather_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/weather_emptyText"
        />
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:elevation="6dp"
        android:layout_gravity="bottom|center"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"/>

</FrameLayout>
